--- a/Index.html
+++ b/Index.html
@@ -14,27 +14,12 @@
 	</div>
 	<nav>
 		<ul>
-		<li><a href="https://fr.wikipedia.org/wiki/Bière" target="_blank">La biere sur Wikipédia</a></li>
+		<li><a href="https://www.google.com/maps/place/130+Rue+des+Bruyères,+84100+Orange,+France/@44.1228541,4.8183944,15z/data=!3m1!4b1!4m5!3m4!1s0x12b590c15c704871:0x2f6911e70da9d4de!8m2!3d44.1228544!4d4.8271492?hl=fr-FR" target="_blank">Adresse du gite</a></li>
 		<li><a href="https://www.brewerydb.com" target="_blank">Brewery DB:une base de données libre</a></li>
 		<li><a href="http://99-bottles-of-beer.net/" target="_blank">99 bottles of beer:bière et code</a></li>
         </ul>
 	</nav>
-	<section>
-	<h1>Définition</h1>
-	
-	<p>
-	La bière est une boisson alcoolisée obtenue par fermentation alcoolique d'un moût de produits végétaux amylacés tels que l'orge, le maïs, le riz (saké), la banane, le manioc... Ce moût est obtenu à l'issue d'une étape importante de la fabrication de la bière, le brassage, opération à l'origine des vocables brasseur et brasserie. C'est la plus ancienne boisson alcoolisée connue au monde et la boisson la plus consommée après l'eau et le thé.
-	</p>
-	<br>
-	<p>
-	La bière actuelle (à partir du Moyen Âge) est généralement produite à partir d’eau, de malt d'orge (parfois additionnée d'autres céréales). Le houblon, en particulier, apporte un parfum et de l'amertume à la bière et agit comme conservateur. Cette boisson est consommée à la pression, en bouteille ou en canette.
-	</p>
-	<p>
-	<br>
-	La consommation de bière est à l'origine de nombreux évènements festifs tels que la Fête de la bière, le Mondial de la bière, la Journée internationale de la bière ; et suscite également de nombreux jeux à boire comme le bière-pong, le Flip cup (en), le bong à bière (en), la botte de bière (de) ou le barathon. Des versions très faiblement alcoolisées (variant de 2° à 0°) sont présentes sur le marché. Contrairement aux autres boissons « sans alcool », elles sont élaborées par les mêmes procédés que la bière classique. La production de bière est réalisée industriellement ou artisanalement dans une brasserie, tout en étant possible par le particulier. 
-	</p>
-	<br>
-	</section>
+
 
 
 </body>
