--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>La biere</title>
+	<title>Gite d'Orange</title>
 	<meta charset="utf-8">
 </head>
 <body>
 	<header>
-		<h1 id="titre">J'aime la bière</h1>
+		<h1 id="titre">Gite d'Orange</h1>
 	</header>
 	<div>
 
@@ -19,6 +19,10 @@
 		<li><a href="http://99-bottles-of-beer.net/" target="_blank">99 bottles of beer:bière et code</a></li>
         </ul>
 	</nav>
+	<div class="photo">
+		<img src="https://a0.muscache.com/im/pictures/f18717eb-361d-44bc-8b82-21bca899caa4.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/d5f73f91-3877-485b-ac2d-a40d85b9b613.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/3d1feb8b-6e98-4d8c-a842-607707fd84cb.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/a7b6270f-2efa-4029-8110-5f7d3a34a069.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/586a358e-3cfc-4156-94a8-4d3be75e0de9.jpg?aki_policy=xx_large" alt="">
+
+	</div>
 
 
 
