--- a/Index.html
+++ b/Index.html
@@ -19,11 +19,33 @@
 		<li><a href="http://99-bottles-of-beer.net/" target="_blank">99 bottles of beer:bière et code</a></li>
         </ul>
 	</nav>
-	<div class="photo">
-		<img src="https://a0.muscache.com/im/pictures/f18717eb-361d-44bc-8b82-21bca899caa4.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/d5f73f91-3877-485b-ac2d-a40d85b9b613.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/3d1feb8b-6e98-4d8c-a842-607707fd84cb.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/a7b6270f-2efa-4029-8110-5f7d3a34a069.jpg?aki_policy=xx_large" alt=""><img src="https://a0.muscache.com/im/pictures/586a358e-3cfc-4156-94a8-4d3be75e0de9.jpg?aki_policy=xx_large" alt="">
 
-	</div>
-
+	<div id="photogite" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-item">
+    <li data-target="#photogite" data-slide-to="0" class="active"></li>
+    <li data-target="#photogite" data-slide-to="1"></li>
+    <li data-target="#photogite" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://a0.muscache.com/im/pictures/f18717eb-361d-44bc-8b82-21bca899caa4.jpg?aki_policy=xx_large" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://a0.muscache.com/im/pictures/d5f73f91-3877-485b-ac2d-a40d85b9b613.jpg?aki_policy=xx_large" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://a0.muscache.com/im/pictures/3d1feb8b-6e98-4d8c-a842-607707fd84cb.jpg?aki_policy=xx_large" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#photogite" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#photogite" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 
 </body>
