--- a/Index.html
+++ b/Index.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Gite d'Orange</title>
-	<meta charset="utf-8">
-</head>
-<body>
-	<header>
-		<h1 id="titre">Gite d'Orange</h1>
-	</header>
-	<div>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Gite d'Orange</title>
+		<meta charset="utf-8">
+	</head>
 
-	</div>
-	<nav>
-		<ul>
-		<li><a href="https://www.google.com/maps/place/130+Rue+des+Bruyères,+84100+Orange,+France/@44.1228541,4.8183944,15z/data=!3m1!4b1!4m5!3m4!1s0x12b590c15c704871:0x2f6911e70da9d4de!8m2!3d44.1228544!4d4.8271492?hl=fr-FR" target="_blank">Adresse du gite</a></li>
-		<li><a href="https://www.brewerydb.com" target="_blank">Brewery DB:une base de données libre</a></li>
-		<li><a href="http://99-bottles-of-beer.net/" target="_blank">99 bottles of beer:bière et code</a></li>
-        </ul>
-	</nav>
+	<body>
+		<header>
+			<h1 id="titre">Gite d'Orange</h1>
+		</header>
+		<div>
 
-	<div id="photogite" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-item">
-    <li data-target="#photogite" data-slide-to="0" class="active"></li>
-    <li data-target="#photogite" data-slide-to="1"></li>
-    <li data-target="#photogite" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://a0.muscache.com/im/pictures/f18717eb-361d-44bc-8b82-21bca899caa4.jpg?aki_policy=xx_large" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://a0.muscache.com/im/pictures/d5f73f91-3877-485b-ac2d-a40d85b9b613.jpg?aki_policy=xx_large" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://a0.muscache.com/im/pictures/3d1feb8b-6e98-4d8c-a842-607707fd84cb.jpg?aki_policy=xx_large" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#photogite" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#photogite" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+		</div>
+		<nav>
+			<ul>
+			<li><a href="https://www.google.com/maps/place/130+Rue+des+Bruyères,+84100+Orange,+France/@44.1228541,4.8183944,15z/data=!3m1!4b1!4m5!3m4!1s0x12b590c15c704871:0x2f6911e70da9d4de!8m2!3d44.1228544!4d4.8271492?hl=fr-FR" target="_blank">Adresse du gite</a></li>
+			<li><a href="https://www.brewerydb.com" target="_blank">Brewery DB:une base de données libre</a></li>
+			<li><a href="http://99-bottles-of-beer.net/" target="_blank">99 bottles of beer:bière et code</a></li>
+	        </ul>
+		</nav>
 
+		<div id="photogite" class="carousel slide" data-ride="carousel">
+	  		<ol class="carousel-item">
+	   			<li data-target="#photogite" data-slide-to="0" class="active"></li>
+	    		<li data-target="#photogite" data-slide-to="1"></li>
+	    		<li data-target="#photogite" data-slide-to="2"></li>
+	 		</ol>
+	  		<div class="carousel-inner">
+	    		<div class="carousel-item active">
+	      			<img src="https://a0.muscache.com/im/pictures/f18717eb-361d-44bc-8b82-21bca899caa4.jpg?aki_policy=xx_large">
+	    		</div>
+	    		<div class="carousel-item">
+	      		<img src="https://a0.muscache.com/im/pictures/d5f73f91-3877-485b-ac2d-a40d85b9b613.jpg?aki_policy=xx_large">
+	    		</div>
+	    		<div class="carousel-item">
+	      		<img src="https://a0.muscache.com/im/pictures/3d1feb8b-6e98-4d8c-a842-607707fd84cb.jpg?aki_policy=xx_large">
+	    		</div>
+	  		</div>
 
-</body>
-
-
+	  		<a class="carousel-control-prev" href="#photogite" role="button" data-slide="prev">
+	    		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    		<span class="sr-only">Previous</span>
+	  		</a>
+	  		<a class="carousel-control-next" href="#photogite" role="button" data-slide="next">
+	    		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    		<span class="sr-only">Next</span>
+	  		</a>
+		</div>
+	</body>
+</html>
 
 
 
